# CajeerBots

./: .env.example  .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  VERSION  alembic.ini  compatibility.yaml  docker-compose.yml  install.sh  pyproject.toml  run.py  run.sh  setup_wizard.py
.github/: CODEOWNERS
admin/: app.js  index.html  style.css
alembic/: env.py
app/: app.js  index.html  style.css
bots/discord/: Dockerfile  README.md  adapter.json  build_info.json  change_journal.json  docker-compose.yml  install.sh  main.py  pyproject.toml  release_required_files.json  requirements.txt  run.sh  setup_wizard.py  upgrade.sh
bots/discord/bot/: __init__.py  bot.py  bot_bridge.py  bot_bridge_runtime.py  bot_capabilities.py  bot_content.py  bot_extensions.py  bot_governance.py  bot_grouped_commands.py  bot_layout_runtime.py  bot_legacy.py  bot_metrics.py  bot_routing.py  bot_scheduler.py  bot_snapshot.py  bot_transport.py  bot_workflows.py  bridge_doctor.py  bridge_smoke.py  buildmeta.py  client.py  community_store.py  config.py  config_schema.py  discord_bindings.py  discord_panels.py  env_doctor.py  event_contracts.py  event_coverage.py  healthcheck.py  http_ingress.py  ingress_smoke.py  locale.py  logging_setup.py  main.py  mapper.py  release_check.py  release_pack.py  remote_logs.py  schema_doctor.py  (+3 more)
bots/discord/bot/handlers/: storage.py
bots/discord/bot/services/: __init__.py  bridge_client.py  nevermine_api.py
bots/discord/infra/logrotate/: nmdiscordbot
bots/discord/infra/nginx/: nmdiscordbot-webhook.conf
bots/discord/infra/systemd/: nmdiscordbot.service
bots/discord/templates/: content.json  server_layout.json
bots/telegram/: Dockerfile  README.md  adapter.json  bootstrap.sh  build_info.json  db_tools.py  docker-compose.yml  main.py  postgres_sync.py  preflight_check.py  pyproject.toml  qa_contract_nm_auth.py  qa_smoke.py  release_build.py  requirements.txt  run.sh  setup_wizard.py  sqlite_export_bundle.py
bots/telegram/bot/: bridge.py  config.py  database.py  delivery.py  event_contracts.py  health_http.py  logging_setup.py  main.py  main_support.py  mapper.py  policy.py  polling.py  postgres_backend.py  remote_log_handler.py  storage.py  templates.py  webhook.py
bots/telegram/bot/handlers/: admin.py  callbacks.py  errors.py  linking.py  ops.py  public.py  security.py  shared.py
bots/telegram/bot/services/: access.py  server_api.py
bots/telegram/infra/nginx/: nmtelegrambot-webhook.conf
bots/telegram/infra/systemd/: nmtelegrambot.service
bots/telegram/ops/grafana/: nmtelegrambot-dashboard.json
bots/telegram/ops/prometheus/: nmtelegrambot-alerts.yml
bots/telegram/templates/: announcement.txt  feed.txt  start.txt
bots/vkontakte/: README.md  adapter.json  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.sh  setup_wizard.py
bots/vkontakte/bot/: bridge.py  callback.py  config.py  event_contracts.py  handlers.py  health_http.py  logger.py  longpoll.py  main.py  mapper.py  outbound_queue.py  remote_log_handler.py  storage.py  thin.py  vk_api.py
core/: __init__.py  adapter_registry.py  api.py  api_dispatcher.py  api_routes.py  asgi.py  audit.py  bridge.py  catalog.py  catalog_signing.py  cli.py  commands.py  compatibility.py  config.py  contracts.py  db.py  db_async.py  db_contract.py  db_models.py  db_resources.py  db_tools.py  dead_letters.py  delivery.py  event_bus.py  events.py  health.py  idempotency.py  imports.py  logging.py  maintenance.py  manifest_schema.py  permissions.py  permissions_fix.py  plugin_package.py  plugin_policy.py  proxy.py  rate_limits.py  rbac_decision.py  rbac_store.py  registry.py  (+13 more)
distributed/: README.md  __init__.py
modules/: README.md
plugins/: README.md
release/: checklist.yaml
schemas/: adapter.schema.json  module.schema.json  plugin-lock.schema.json  plugin-package.schema.json
scripts/: build_release_zip.py  chaos_storage_backends.py  chaos_worker_crash.py  check_architecture.py  check_docs.sh  check_secrets.sh  check_syntax.py  clean_artifacts.sh  doctor.sh  fault_drill.sh  install.sh  load_delivery.py  load_event_bus.py  load_webhooks.py  migrate.sh  release.sh  run.sh  run_drills.sh  setup_wizard.py  smoke.sh  smoke_integrations.sh
tests/: test_admin_static_contract.py  test_api.py  test_api_scopes.py  test_api_stdlib_contract.py  test_audit_metrics_contract.py  test_catalog_signing.py  test_command_rbac_contract.py  test_config.py  test_contract_integrations.py  test_distributed_control_plane_contract.py  test_distributed_protocol.py  test_docker_artifact_contract.py  test_doctor.py  test_env_loader.py  test_events.py  test_integration_smoke_contract.py  test_observability_pack_contract.py  test_ops_hardening_contract.py  test_plugin_marketplace_contract.py  test_plugin_policy.py  test_plugin_runtime_contract.py  test_production_secret_guard.py  test_rbac_async_modules_contract.py  test_rbac_bootstrap_schema_contract.py  test_rbac_db_runtime_contract.py  test_readiness_profiles.py  test_registry.py  test_release_contract.py  test_release_hygiene_contract.py  test_release_version_contract.py  test_runtime_selection.py  (+7 more)
(+150 files in other folders)
