[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cajeer-bots"
version = "0.9.1"
description = "Универсальная платформа для запуска и расширения ботов"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "TheSkiF4er"}]
dependencies = ["psycopg[binary]>=3.1.18"]

[project.optional-dependencies]
api = []
adapters = ["python-telegram-bot>=21.0", "discord.py>=2.3.2", "vk-api>=11.9.9"]
redis = ["redis>=5.0.0"]
dev = ["pytest>=8.0.0", "ruff>=0.4.0", "mypy>=1.9.0"]

[project.scripts]
cajeer-bots = "core.cli:main"

[tool.setuptools.packages.find]
include = ["core*"]

[tool.ruff]
line-length = 120
target-version = "py311"
