[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cajeer-bots"
version = "0.10.1"
description = "Универсальная платформа для запуска и расширения ботов"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "Apache-2.0"}
authors = [{name = "TheSkiF4er"}]
dependencies = [
  "SQLAlchemy[asyncio]>=2.0.30",
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "psycopg[binary]>=3.1.18",
]

[project.optional-dependencies]
api = ["uvicorn>=0.30.0"]
adapters = ["aiogram>=3.7.0", "discord.py>=2.3.2", "vkbottle>=4.3.12"]
redis = ["redis>=5.0.0"]
prod = ["aiogram>=3.7.0", "discord.py>=2.3.2", "vkbottle>=4.3.12", "redis>=5.0.0"]
dev = ["pytest>=8.0.0", "ruff>=0.4.0", "mypy>=1.9.0"]

[project.scripts]
cajeer-bots = "core.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["core*", "distributed*", "bots*", "modules*", "plugins*"]

[tool.setuptools.package-data]
"bots" = ["*/adapter.json", "*/README.md"]
"modules" = ["*/module.json", "*/README.md"]
"plugins" = ["*/plugin.json", "*/README.md"]

[tool.setuptools.data-files]
"share/cajeer-bots/schemas" = ["schemas/*.json"]
"share/cajeer-bots/env" = ["configs/env/.env*.example"]
"share/cajeer-bots/wiki" = ["wiki/*.md"]
"share/cajeer-bots/admin" = ["admin/*"]
"share/cajeer-bots/ops/nginx" = ["ops/nginx/*"]
"share/cajeer-bots/ops/systemd" = ["ops/systemd/*"]
"share/cajeer-bots/ops/prometheus" = ["ops/prometheus/*"]
"share/cajeer-bots/ops/grafana" = ["ops/grafana/*"]

[tool.ruff]
line-length = 120
target-version = "py311"
