[project]
name = "nmdiscordbot"
version = "0.31.0"
description = "Discord runtime bot for NeverMine community layer"
requires-python = ">=3.11"
dependencies = [
  "discord.py==2.5.2",
  "aiohttp==3.12.14",
  "python-dotenv==1.1.0",
  "aiosqlite==0.21.0",
  "asyncpg==0.30.0",
  "redis==6.2.0",
]

[project.optional-dependencies]
dev = [
  "ruff==0.11.13",
  "mypy==1.15.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
