[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nmvkbot"
version = "1.1.0"
description = "NeverMine VK runtime bot"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31.0,<3.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
]

[tool.setuptools]
packages = ["nmbot"]
